--- a/lab03.html
+++ b/lab03.html
@@ -98,11 +98,13 @@
             <div style="width: 1056px; height: 500px;">
                 <ul>
                     <li>Table has rules for Flights, Cars and Hotels:</li>
+                    <br>
                     <ul>
-                        <li>Flights: for diverse asian airport codes gets 10 discount</li>
-                        <li>Cars: for Hertz car rental company gets 15 discount</li>
-                        <li>Hotel: for lenght of stay six or more days gets 10 discount</li>
+                        <li><p style="font-size: 24px">Flights: for diverse asian airport codes gets 10 discount</p></li>
+                        <li><p style="font-size: 24px">Cars: for Hertz car rental company gets 15 discount</p></li>
+                        <li><p style="font-size: 24px">Hotel: for lenght of stay six or more days gets 10 discount</p></li>
                     </ul>
+                    <br>
                     <img src="images/destinasia-workshop/image28.png" align="right">
                 </ul>
             </div>
@@ -141,12 +143,14 @@
             <div style="width: 1056px; height: 120px;">
                 <h2>FIX RULE TEST</h2>
             </div>
-            <div style="width: 1056px; height: 600px;">
+            <div style="width: 1056px; height: 600px;" align="left">
+                Note red failure, look where it failed and fix:
+                <br><br>
                 <ul>
-                    <li>Note red failure, look where it failed and fix</li>
-                    <li><i>Flight Destination (flightTo)</i> change to <i>SIN</i> for Singapore</li>
-                    <li>Click on <i>Save</i> button to enter commit message and rerun test</li>
+                    <li><p style="font-size: 24px"><i>Flight Destination (flightTo)</i> change to <i>SIN</i> for Singapore</p></li>
+                    <li><p style="font-size: 24px">Click on <i>Save</i> button to enter commit message and rerun test</p></li>
                 </ul>
+                <br><br>
                 <img src="images/destinasia-workshop/image32.png" align="right">
             </div>
         </section>
@@ -161,15 +165,17 @@
         </section>
 
         <section>
-            <div style="width: 1056px; height: 150px;">
+            <div style="width: 1056px; height: 170px;">
                 <h2>WHAT'S NEXT?</h2>
                 <h5>Infrastructure automation to deploy applications...</h5>
             </div>
-            <div style="width: 1056px; height: 500px;">
+            <div style="width: 1056px; height: 400px;">
                 <ul>
                     <li>You understand the discount rules and have tested them</li>
                     <li>Going to use Ansible Playbooks to automoate container deployments</li>
                 </ul>
+                <br><br>
+                <img style="border: 2px solid black" src="images/destinasia-workshop/image35.jpg" align="right">
             </div>
         </section>
 
