--- a/lab01.html
+++ b/lab01.html
@@ -107,9 +107,9 @@
                     <li>Download <a href="https://github.com/redhatdemocentral/ocp-install-demo/archive/master.zip" style="color: red" target="_blank">ocp-install-demo</a> and unzip</li>
                     <li>Run init.sh or init.bat (Windows admin privileges)</li>
                     <ul>
-                        <li><code>$ unzip ocp-install-demo-master.zip</code></li>
-                        <li><code>$ cd ocp-install-demo-master</code></li>
-                        <li><code>$ ./init.{sh|bat}</code></li>
+                        <li><p style="font-size: 24px"><code>$ unzip ocp-install-demo-master.zip</code></p></li>
+                        <li><p style="font-size: 24px"><code>$ cd ocp-install-demo-master</code></p></li>
+                        <li><p style="font-size: 24px"><code>$ ./init.{sh|bat}</code></p></li>
                     </ul>
                     <li>See next slides for dealing with any issues</li>
                     <img width="30%" height="30%" src="images/destinasia-workshop/image02.png" align="right">
@@ -125,9 +125,9 @@
                 <b>Possible Mac error:</b>
                 <br>
                 <ul>
-                    <li><i><code>VirtualBox is required but not installed yet... download here:
+                    <li><p style="font-size: 24px"><code>VirtualBox is required but not installed yet... download here:
                         <a href="https://www.virtualbox.org/wiki/Downloads" style="color: red" target="_blank">
-                            https://www.virtualbox.org/wiki/Downloads</a></code></i></li>
+                            https://www.virtualbox.org/wiki/Downloads</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -147,9 +147,9 @@
                 <b>Missing:</b>
                 <br>
                 <ul>
-                    <li><i><code>Docker is required but not installed yet... download here:
+                    <li><p style="font-size: 24px"><code>Docker is required but not installed yet... download here:
                         <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></i></li>
+                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -169,11 +169,11 @@
                 <b>Not running:</b>
                 <br>
                 <ul>
-                    <li><i><code>Docker is installed... checking for valid version...Docker deamon is not running...
-                        please start Docker for osX...</code></i></li>
-                    <li><i><code>Docker deamon is not running... or is running insecurely...Check for instructions
+                    <li><p style="font-size: 24px"><code>Docker is installed... checking for valid version...Docker deamon is not running...
+                        please start Docker for osX...</code></p></li>
+                    <li><p style="font-size: 24px"><code>Docker deamon is not running... or is running insecurely...Check for instructions
                         at: <a href="https://docs.docker.com/linux" style="color: red" target="_blank">
-                            https://docs.docker.com/linux</a></code></i></li>
+                            https://docs.docker.com/linux</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -193,9 +193,9 @@
                 <b>Version problems:</b>
                 <br>
                 <ul>
-                    <li><i><code>Docker engine version X.X found... need 1.13, please update:
+                    <li><p style="font-size: 24px"><code>Docker engine version X.X found... need 1.13, please update:
                         <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank">
-                            https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></i></li>
+                            https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -215,9 +215,9 @@
                 <b>Missing:</b>
                 <br>
                 <ul>
-                    <li><i><code>OpenShift CLI tooling is required but not installed yet... download here:
+                    <li><p style="font-size: 24px"><code>OpenShift CLI tooling is required but not installed yet... download here:
                         <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></i></li>
+                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -237,11 +237,11 @@
                 <b>Version:</b>
                 <br>
                 <ul>
-                    <li><i><code>OpenShift command line tools installed... checking for valid version...</code></i></li>
-                    <li>Version of installed OpenShift command line tools is vX.X.X, must be v3.x.x or higher...
+                    <li><p style="font-size: 24px"><code>OpenShift command line tools installed... checking for valid version...</code></li>
+                    <li><p style="font-size: 24px">Version of installed OpenShift command line tools is vX.X.X, must be v3.x.x or higher...
                         Download for Mac/Linux/Windows here:
                         <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></i></li>
+                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
@@ -327,13 +327,12 @@
             <div style="width: 1056px; height: 120px;">
                 <h2>LOG IN TO OCP</h2>
             </div>
-            <div style="width: 1056px; height: 500px;">
+            <div style="width: 1056px; height: 600px;">
+                <a href="http://192.168.99.100:8443" style="color: red" target="_blank">http://192.168.99.100:8443</a>
+                <br><br>
                 <ul>
-                    <li><a href="http://192.168.99.100:8443" style="color: red" target="_blank">http://192.168.99.100:8443</a></li>
-                    <ul>
-                        <li>user: <code>openshift-dev</code></li>
-                        <li>password: <code>devel</code></li>
-                    </ul>
+                    <li><p style="font-size: 24px">user: <code>openshift-dev</code></p></li>
+                    <li><p style="font-size: 24px">password: <code>devel</code></p></li>
                 </ul>
             </div>
         </section>
