Fixed numbering labs.

--- a/lab05.html
+++ b/lab05.html
@@ -95,7 +95,7 @@
             </div>
             <div style="width: 1056px; height: 180px;">
                 <ul>
-                    <li>The flightservice playbook stars with messages, setup and loging in to the
+                    <li>The flight service playbook stars with messages, setup and loging in to the
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
@@ -156,7 +156,7 @@
             </div>
             <div style="width: 1056px; height: 500px;">
                 <ul>
-                    <li>When a build finishes you see a new deployment contianer appears in <i>Monitoring</i>
+                    <li>When a build finishes you see a new deployment container appears in <i>Monitoring</i>
                         view under <i>Deployments</i>:</li>
                 </ul>
                 <img src="images/destinasia-workshop/image54.png" align="right">
@@ -186,7 +186,7 @@
 
         <section>
             <h2>Up Next...</h2>
-            <h3><a href="lab06.html" style="color: red" target="_blank">Lab 06 - Car service playbook</a></h3>
+            <h3><a href="lab06.html" style="color: red" target="_blank">Lab 6 - Car service playbook</a></h3>
         </section>
     </div>
 </div>
