--- a/lab04.html
+++ b/lab04.html
@@ -96,7 +96,7 @@
             </div>
             <div style="width: 1056px; height: 180px;">
                 <ul>
-                    <li>The rule service playbook stars with messages, setup and loging in to the
+                    <li>The rule service playbook stars with messages, setup and logging in to the
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
@@ -132,7 +132,7 @@
             <div style="width: 1056px; height: 150px;">
                 <ul>
                     <li>The rule service playbook finally deploys a new container, <i>xPaaS Decision Service</i>
-                        with the dicount rules extracted previously and reports playbook status as it finishes:</li>
+                        with the discount rules extracted previously and reports playbook status as it finishes:</li>
                     <br>
                 </ul>
             </div>
@@ -215,7 +215,7 @@
             </div>
             <div style="width: 1056px; height: 500px;">
                 <ul>
-                    <li>When a build finishes you see a new deployment contianer appears in <i>Monitoring</i>
+                    <li>When a build finishes you see a new deployment container appears in <i>Monitoring</i>
                         view under <i>Deployments</i>:</li>
                 </ul>
                 <img src="images/destinasia-workshop/image45.png" align="right">
