--- a/lab05.html
+++ b/lab05.html
@@ -95,7 +95,7 @@
             </div>
             <div style="width: 1056px; height: 180px;">
                 <ul>
-                    <li>The flight service playbook stars with messages, setup and loging in to the
+                    <li>The flight service playbook stars with messages, setup and logging in to the
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
