--- a/lab07.html
+++ b/lab07.html
@@ -52,7 +52,7 @@
         <section>
             <div style="width: 1056px; height: 130px;">
                 <h2>Lab Goal</h2>
-                <h4>To leverage Ansible automation to depoy PHP web service in a container.</h4>
+                <h4>To leverage Ansible automation to deploy PHP web service in a container.</h4>
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image01.png">
