Adjusted some of the text.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
                 <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
-                    <div style="width: 1056px; height: 450px; color: white">
-                        <h2 style="color: white">Rule the World</h2>
-                        <h3 style="color: white">AppDev in the Cloud</h3>
-                        <h4 style="color: white">Workshop</h3>
+                    <div style="width: 1056px; height: 250px; color: white">
+                        <h2 style="color: white">Application Development</h2>
+                        <h2 style="color: white">in the Cloud Workshop</h2>
+                    </div>
+                    <div style="width: 1056px; height: 200px; color: white">
+                        <h3><a href="http://appdevcloudworkshop.github.io" style="color: red" target="_blank">http://appdevcloudworkshop.github.io</a></h3>
                     </div>
                     <div style="width: 600px; height: 300px; text-align: left; color: white">
                         Eric D. Schabell<br/>
@@ -64,7 +66,7 @@
                     <div style="width: 1056px; height: 300px; color: white;">
                         <ol>
                             <li>Introduction to workshop</li>
-                            <li>Destinasia Travel Agency</li>
+                            <li>Destinasia travel services</li>
                         </ol>
                     </div>
                 </section>
@@ -74,10 +76,10 @@
                         <h1 style="color: white">Part I</h1>
                     </div>
                     <div style="width: 100%; height: 150px; color: white">
-                        <h2 style="color: white">Destinasia Workshop Introduction</h2>
+                        <h2 style="color: white">Workshop introduction</h2>
                     </div>
                     <div style="width: 100%; height: 300px;">
-                        <h3><a href="introduction.html" target="_blank" style="color: red">Get started with workshop overview presentation.</a></h3>
+                        <h3><a href="introduction.html" target="_blank" style="color: red">Overview AppDev Cloud Workshop</a></h3>
                     </div>
                 </section>
 
@@ -90,12 +92,13 @@
                         <h2 style="color: white">Destinasia Travel Agency</h2>
                     </div>
                     <div style="width: 100%; height: 220px; color: white">
-                            This workshop will get you hands on with installing the OpenShift Container Platform
-                            and then deploy 6 containerized services to handle Destinasia Travel Agency booking process.
+                            This workshop is hands-on installing the OpenShift Container Platform, deploying six
+                            containerized services for Destinasia backend systems and testing the results.
                     </div>
                     <div style="width: 100%; height: 100px;">
                         <ul style="color: white">
-                            <li><i><a href="lab01.html" target="_blank" style="color: red"><b>Destinasia Travel Rules Demo - Containers, BRMS, xPaaS, PHP, .NET and JEE</b></a></i></li>
+                            <li><i><a href="lab01.html" target="_blank" style="color: red"><b>Destinasia workshop -
+                                OpenShift Container Platform, Containers, JBoss BRMS, xPaaS, PHP, .NET & JEE</b></a></i></li>
                         </ul>
                     </div>
                 </section>
