--- a/introduction.html
+++ b/introduction.html
@@ -68,7 +68,7 @@
                 <h2 style="color: white;">WORKSHOP GOALS</h2>
             </div>
             <div style="width: 100%; height: 80px; text-align: left; color: white">
-                Give insights into DevOps as used in a travel industry story:<br/>
+                Gain insights into DevOps as used in a travel industry story:<br/>
             </div>
             <div style="width: 100%; height: 380px; text-align: left; color: white">
                 <ul>
@@ -85,7 +85,7 @@
                 </ul>
             </div>
             <div style="width: 1056px; height: 20px; text-align: left; color: white">
-                Availabel on <a href="http://github.com/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Red Hat Demo Central</b></a> for you to take home!
+                Available on <a href="http://github.com/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Red Hat Demo Central</b></a> for you to take home!
             </div>
         </section>
 
@@ -163,7 +163,7 @@
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 100%; height: 180px; color: white">
+            <div style="width: 100%; height: 150px; color: white">
                 <h2 style="color: white;">INSTALLATION</h2>
                 <h4 style="color: white">DESTINASIA TRAVEL RULES DEMO</h4>
             </div>
@@ -175,15 +175,16 @@
                         <li>Add to <i>installs</i> directory</li>
                     </ul>
                     <li>Run init.sh or init.bat, point it at OCP installation:</li>
+                    <br>
                     <ul>
-                        <li><b><i>$ init.sh 192.168.99.100</i></b></li>
+                        <li><p style="font-size: 24px"><code>$ init.sh 192.168.99.100</code></p></li>
                     </ul>
+                    <br>
                     <li>Enjoy the break before logging in:</li>
+                    <br>
                     <ul>
-                        <li><a href="http://apac-destinasia-rules-demo.192.168.99.100.xip.io/business-central" style="color: red" target="_blank"><b>http://apac-destinasia-rules-demo.192.168.99.100.xip.io/business-central
-                        </b></a></li>
-                        <li>User: <b><i>erics</i></b></li>
-                        <li>Password: <b><i>jbossbrms1!</i></b></li>
+                        <li><p style="font-size: 22px"><code><a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central"
+                               style="color: red" target="_blank"><b>http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</b></a> (password: jbossbrms1!)</code></p>
                     </ul>
                 </ul>
             </div>
@@ -191,7 +192,7 @@
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
             <div style="width: 980px; height: 80px; color: white">
-                <h4 style="color: red"><b>Decision Table: <i>HERTZ</i> car discount is <i>15</i></b></h4>
+                <h4 style="color: white"><b>Decision Table: <i>HERTZ</i> car discount is <i>15</i></b></h4>
             </div>
             <div style="width: 980px; height: 400px;">
                 <img width="100%" height="100%" src="images/introduction/image04.png">
