Slight text adjustment.

--- a/lab01.html
+++ b/lab01.html
@@ -48,7 +48,7 @@
             </div>
             <div style="width: 1056px; height: 400px;">
                 <h5>
-                    This workshop you become the lead developer who sets up a development environment for the Cloud
+                    In this workshop you become the lead developer who sets up a development environment for the Cloud
                     hosted containerized application services for end-to-end testing. This entails installing OpenShift
                     Container Platform (OCP), JBoss Enterprise Application Platform (EAP), JBoss Business Rules Management
                     System (BRMS), several containerized web services and test the end-to-end solution using a REST
@@ -364,7 +364,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab02.html" style="color: red" target="_blank">Lab 2 - Install JBoss BRMS</a></h3>
         </section>
     </div>
