--- a/lab02.html
+++ b/lab02.html
@@ -237,7 +237,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab03.html" style="color: red" target="_blank">Lab 3 - Discount travel rules</a></h3>
         </section>
     </div>
