--- a/lab04.html
+++ b/lab04.html
@@ -244,7 +244,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab05.html" style="color: red" target="_blank">Lab 5 - Flight service playbook</a></h3>
         </section>
     </div>
