--- a/lab05.html
+++ b/lab05.html
@@ -185,7 +185,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab06.html" style="color: red" target="_blank">Lab 6 - Car service playbook</a></h3>
         </section>
     </div>
