--- a/lab08.html
+++ b/lab08.html
@@ -178,7 +178,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab09.html" style="color: red" target="_blank">Lab 9 - RestAPI client testing of backend services</a></h3>
         </section>
     </div>
