--- a/lab03.html
+++ b/lab03.html
@@ -209,7 +209,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab04.html" style="color: red" target="_blank">Lab 4</a></h3>
             <h3><a href="lab04.html" style="color: red" target="_blank">Automated rule service deployment</a></h3>
         </section>
