--- a/lab06.html
+++ b/lab06.html
@@ -191,7 +191,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab07.html" style="color: red" target="_blank">Lab 7 - Hotel service playbook</a></h3>
         </section>
     </div>
