--- a/lab07.html
+++ b/lab07.html
@@ -191,7 +191,7 @@
         </section>
 
         <section>
-            <h2>Up Next...</h2>
+            <h2>UP NEXT...</h2>
             <h3><a href="lab08.html" style="color: red" target="_blank">Lab 8 - Integration service playbook</a></h3>
         </section>
     </div>
