Spell checked slides for labs 1-3.

--- a/lab01.html
+++ b/lab01.html
@@ -59,7 +59,7 @@
                 </h5>
             </div>
             <div style="width: 1056px; height: 100px;">
-                <h5 style="color: red"><b>Pre-requisits:</b> <i>Laptop with 16GB RAM, Docker 1.13, OCP 3.4, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
+                <h5 style="color: red"><b>Pre-requisites:</b> <i>Laptop with 16GB RAM, Docker 1.13, OCP 3.4, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
             </div>
         </section>
 
@@ -81,7 +81,7 @@
         <section>
             <div style="width: 1056px; height: 130px;">
                 <h2>Lab Goal</h2>
-                <h4>To install and login to OpenShift Contianer Platform</h4>
+                <h4>To install and login to OpenShift Container Platform</h4>
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image01.png">
