--- a/lab03.html
+++ b/lab03.html
@@ -84,7 +84,7 @@
         <section>
             <div style="width: 1056px; height: 120px;">
                 <h2>DECISION TABLE</h2>
-                <h5>Project opens with dicount rules in decision table</h5>
+                <h5>Project opens with discount rules in decision table</h5>
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image27.png">
@@ -102,7 +102,7 @@
                     <ul>
                         <li><p style="font-size: 24px">Flights: for diverse asian airport codes gets 10 discount</p></li>
                         <li><p style="font-size: 24px">Cars: for Hertz car rental company gets 15 discount</p></li>
-                        <li><p style="font-size: 24px">Hotel: for lenght of stay six or more days gets 10 discount</p></li>
+                        <li><p style="font-size: 24px">Hotel: for length of stay six or more days gets 10 discount</p></li>
                     </ul>
                     <br>
                     <img src="images/destinasia-workshop/image28.png" align="right">
@@ -172,7 +172,7 @@
             <div style="width: 1056px; height: 400px;">
                 <ul>
                     <li>You understand the discount rules and have tested them</li>
-                    <li>Going to use Ansible Playbooks to automoate container deployments</li>
+                    <li>Going to use Ansible Playbooks to automate container deployments</li>
                 </ul>
                 <br><br>
                 <img style="border: 2px solid black" src="images/destinasia-workshop/image35.jpg" align="right">
